# tax_code

./: .gitignore  Bracket.json  Cargo.toml  README.md  build.rs  build_script_build
src/: Bracket.json  brackets.rs  deductions.json  deductions.rs  generated_tax_data.rs  income_based_deduction.rs  lib.rs  states_with_exemptions.json  step_deduction.json  tax_bracket.rs
tax_code_demo/: Cargo.toml
tax_code_demo/src/: main.rs
